objects/Export__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Road</fullName>
                </value>
                <value>
                    <fullName>Air</fullName>
                </value>
                <value>
                    <fullName>Water</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Export</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>export_list</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>USD</value>
        </filters>
        <label>export list</label>
    </listViews>
    <nameField>
        <label>Exports Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Export</pluralLabel>
    <recordTypes>
        <fullName>International</fullName>
        <active>true</active>
        <label>International</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Address_empty</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Address__c )</errorConditionFormula>
        <errorDisplayField>Address__c</errorDisplayField>
        <errorMessage>Please enter address</errorMessage>
    </validationRules>
</CustomObject>